fixed font size across the board. Easily readable on normal down to smallest screen

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -40,7 +40,7 @@
 .paragraph {
     margin-left: 5%;
     margin-right: 5%;
-    font-size: 20px;
+    font-size: 30px;
     margin-bottom:5%;
     margin-top: 2%;
 }
@@ -95,6 +95,7 @@
     .paragraph {
         margin-left: 7%;
         margin-right: 7%;
+        font-size: 20px;
     }
 
     #quoteCoffee {
