--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,7 +1,7 @@
 #think {
     position: absolute;
     margin-left: 55%;
-    margin-top: -4%;
+    margin-top: 2%;
     width: 30%;
 }
 #reach{
